updated html and css for landing page

--- a/index.html
+++ b/index.html
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
-
-    <body>Hello world!</body>
-<script
-  src="https://code.jquery.com/jquery-3.1.1.min.js"
-  integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-  crossorigin="anonymous"></script>
-<script src="semantic/dist/semantic.min.js"></script>
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+      <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+      <link rel="stylesheet" type="text/css" href="style.css">
+   </head>
+   <body id="root">
+      <div class="pusher">
+         <div class="ui  vertical masthead center aligned segment">
+            <div class="ui container"></div>
+            <div class="ui text container">
+               <h1 class="ui header">Welcome!</h1>
+               <h2>Do you plan on traveling to another city or even another country but are concerned because COVID-19? Don't worry! We got you covered!
+                 <br>
+                 <br>
+                In the search bar below you'll be able to see the caseloads, travel restrictions and requirements for wherever you are traveling to.</h2>
+                <div class="ui search">
+                  <div class="ui icon input">
+                    <input class="prompt" type="text" placeholder="Search countries...">
+                    <i class="search icon"></i>
+                  </div>
+                  <div class="results"></div>
+                </div>
+                <br>
+               <div class="ui huge primary button">
+                  Let's Go! <i class="right arrow icon"></i>
+               </div>
+            </div>
+         </div>
+      </div>
+   </body>
+   <script
+      src="https://code.jquery.com/jquery-3.1.1.min.js"
+      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+      crossorigin="anonymous"></script>
+   <script src="semantic/dist/semantic.min.js"></script>
