--- a/results.html
+++ b/results.html
@@ -20,6 +20,43 @@
           </div>
        </div>
     </div>
+    
+    <div class="ui raised very padded text container segment ">
+      <h2 class="ui header">Results for: Country Name</h2>
+      <p>Area vaxed percentage with 1 dose: 10%</p>
+      <p>Area vaxed percentage fully dosed: 28%</p>
+      <p>Risk level: color background</p>
+         <li>none/low = green</li>
+        <li>medium = yellow</li>
+        <li>high = red</li></p>
+    </div>
+
+    <div class="ui raised very padded text container segment">
+      <h2 class="ui header">Results for: Country Name</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, qui, accusantium facilis, consequuntur quasi perferendis explicabo fugiat mollitia nam nemo neque quidem nobis aliquam earum aspernatur aut deserunt porro odio?</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta est sequi, illum exercitationem perferendis earum numquam quam laborum. Laborum hic eum dolor nisi consectetur totam minima asperiores laboriosam excepturi velit.</p>
+    </div>
+
+    <div class="ui raised very padded text container segment">
+      <h2 class="ui header">Email me the info!</h2>
+      <form class="ui form">
+         <div class="field">
+           <label>E-mail</label>
+           <input type="text" name="first-name" placeholder="First Name">
+         </div>
+     
+         <div class="field">
+           <div class="ui checkbox">
+             <input type="checkbox" tabindex="0" class="hidden">
+             <label>I agree to the Terms and Conditions</label>
+           </div>
+         </div>
+         <button class="ui button" type="submit">Submit</button>
+       </form>
+    </div>
+
+
+
  </body>
 
    <script
