added anchor to button

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
                   <div class="results"></div>
                 </div>
                 <br>
-               <div class="ui huge primary button">
+                <a href="results.html">
+               <button class="ui huge primary button">
                   Let's Go! <i class="right arrow icon"></i>
-               </div>
+               </button></a>
             </div>
          </div>
       </div>
