updated htmls and styles

--- a/results.html
+++ b/results.html
@@ -23,12 +23,13 @@
     
     <div class="ui raised very padded text container segment ">
       <h2 class="ui header">Results for: Country Name</h2>
-      <p>Area vaxed percentage with 1 dose: 10%</p>
-      <p>Area vaxed percentage fully dosed: 28%</p>
-      <p>Risk level: color background</p>
-         <li>none/low = green</li>
-        <li>medium = yellow</li>
-        <li>high = red</li></p>
+      <h1 >Results for: <span id='area'></span></h1>
+      <h3>Area vaxed percetage with 1 dose: <span id="areavax"></span></h3>
+      <h3>Area vaxed percetage fully dosed: <span id="areavax2"></span></h3>
+      <p>Cases confirmed: <span id="cases"></span></p>
+      <p>Risk level: <span id="riskLevel"></span></p>
+      <p id="type"></p>
+      <p id="summary"></p>
     </div>
 
     <div class="ui raised very padded text container segment">
