adding search history in js

--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
 
                     </form>
                   </div>
-                  <div class="results"></div>
+                  <div class = "prevHistory border" id = "prevHistory-buttons"></div>
+                  <br>
+                  <button class="btn btn-danger mb-3" type="button" id="clear">Clear history</button>
+                  <form id="history"></form>
+              </div>
                 </div>
                 <br>
                <inpput class="ui huge primary button" type="submit" id="country">
