added ar for buttons / prevHistory

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
                     </form>
                   </div>
-                  <div class = "prevHistory border" id = "prevHistory-buttons"></div>
+                  <div class="prevHistory" id="prevHistory-buttons"></div>
                   <br>
                   <button class="btn btn-danger mb-3" type="button" id="clear">Clear history</button>
                   <form id="history"></form>
