--- a/results.html
+++ b/results.html
@@ -60,6 +60,7 @@
 
  </body>
 
+ <script src="./script.js"></script>
    <script
    src="https://code.jquery.com/jquery-3.1.1.min.js"
    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
