updated index typos

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <form id="list" action="/action_page.php" method="get">
                       <label for="browser">Search for your country destination:</label>
                       <br>
-                      <input class="prompt" list="countries" type="text" name="countries" onfocus="this.value=''" placeholder="Search countries..." >
+                      <input class="prompt" list="countries" type="text" name="countries" onfocus="this.value=''" placeholder="Search countries..." id="c">
                       <datalist id="countries">
                     
                       </datalist>
@@ -48,9 +48,9 @@
               </div>
                 </div>
                 <br>
-               <inpput class="ui huge primary button" type="submit" id="country">
+               <button class="ui huge primary button" type="submit" id="country">
                   Let's Go! <i class=" plane icon"></i>
-               </inpput>
+               </button>
             </div>
             <div>
          </div>
