--- a/index.html
+++ b/index.html
@@ -13,29 +13,28 @@
 <body id="root">
   <div class="pusher">
     <div class="ui vertical masthead center aligned segment">
-      <div class="ui container"></div>
       <div class="ui text container">
         <div id="init" class="ui header">
-          <h1>Welcome!</h1>
+          <h1 class="ui header">Welcome!</h1>
           <h2>Do you plan on traveling to another city or even another country but are concerned because COVID-19? Don't
             worry! We got you covered!
             <br>
             <br>
-            In the search bar below you'll be able to see the caseloads, travel restrictions and requirements for
-            wherever you are traveling to.
+            In the searchbar below, you'll be able to see the caseloads, travel restrictions and requirements for
+            wherever you are traveling.
           </h2>
         </div>
         <div id="secondPage" class="hide pusher">
           <div class="ui vertical masthead center aligned segment">
             <div class="ui container"></div>
             <div class="ui text container">
-              <h1 class="ui header">Lucky you!</h1>
+              <h1 class="ui header">Here you go!</h1>
               <h2>We have the information you need regarding your destination.</h2>
             </div>
           </div>
         </div>
         <div class="ui search">
-          <div class="ui input">
+          <div class="ui large icon input">
             <form id="list" action="/action_page.php" method="get">
               <label for="browser">Search for your country destination:</label>
               <br>
@@ -46,7 +45,7 @@
           </div>
           <div class="prevHistory" id="prevHistory-buttons"></div>
           <br>
-          <button class="btn btn-danger mb-3" type="button" id="clear">Clear history</button>
+          <button class="ui red button" type="button" id="clear">Clear history <i class="eraser icon"></i></button>
           <form id="history"></form>
         </div>
       </div>
@@ -58,10 +57,11 @@
     <div>
     </div>
   </div>
-  <div id="infoResult" class="hide ui one column doubling grid raised container segment">
+  <div id="infoResult" class="hide ui one column raised container segment">
     <div class="row">
       <h1 class="ui header"> Results for: <span id='area'></span></h1>
     </div>
+    <br>
     <div class="column">
       <h3>Area vaxed percetage with 1 dose: <span id="areavax"></span></h3>
       <h3>Area vaxed percetage fully dosed: <span id="areavax2"></span></h3>
@@ -70,7 +70,7 @@
       <h3>Risk level: <span id="riskLevel"></span></h3>
     </div>
   </div>
-  <div id="infoResultTwo" class="hide ui three column doubling stackable grid raised container segment">
+  <div id="infoResultTwo" class="hide ui three column doubling stackable grid raised  container segment">
     <div class="column">
       <h1>Entry Regulations:</h1>
       <h3>Mask requirement: <span id="mask"></span></h3>
@@ -91,25 +91,12 @@
     </div>
   </div>
 
-  <div id="emailSender" class="hide ui raised very padded text container segment">
-    <!-- <h2 class="ui header">Email me the info!</h2>
-        <form class="ui form">
-            <div class="field">
-              <form action="https://mailthis.to/you@mail.com" method="POST"> 
-                <input type="email" name="_replyto" placeholder="Your email">
-                <input class="ui button" type="submit" value="Send"></input>
-             </form>   
-            </div>         
-        </form>  -->
-    <h2 class="ui header">Email me the info!</h2>
+  <div id="emailSender" class="hide ui center aligned raised padded text container segment">
+    <h2 class="ui center aligned header">Email me the info!</h2>
     <div class="ui action input">
-      <input type="text" placeholder="Search...">
+      <input type="text" placeholder="name@email.com">
       <button id="emailSender" class="ui button">Send</button>
     </div>
-
-  </div>
-  </div>
-  </div>
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
