Updated font style and button styles. Adj. container placement

--- a/results.html
+++ b/results.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -68,4 +68,4 @@
 <script src="./script.js"></script>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-<script src="semantic/dist/semantic.min.js"></script>
+<script src="semantic/dist/semantic.min.js"></script> -->
